--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -95,6 +95,13 @@ footer {
                 }
                 ul{
                     margin-top:2.5rem;
+                    .list-title{
+                        padding-bottom: 15px;
+                        display: block;
+                        font-size: 1rem;
+                        color: $color-blue;
+                        font-weight: 600;
+                    }
                     li{
                         margin-bottom:.5rem;
                         a{
