Nepal logo is changed and active color

--- a/src/scss/base/animation.scss
+++ b/src/scss/base/animation.scss
@@ -1099,7 +1099,8 @@
         opacity: 0
     }
 }
-.stretch{
+
+@mixin stretch{
     animation-name: stretch;
     -webkit-animation-name: stretch;
     animation-duration: 1.5s; 
