--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -261,30 +261,10 @@
                                     }
                                     &.red{
                                         background-color:rgba($color-secondary,.2);
-                                        animation-name: stretch;
-                                        animation-duration: 1.5s; 
-                                        animation-timing-function: ease-out;
-                                        animation-delay: 0s;
-                                        animation-direction: alternate;
-                                        animation-iteration-count: infinite;
-                                        animation-play-state: running; 
-                                        
-                                        @keyframes stretch {
-                                            0% {
-                                                background-color: lighten($color: $color-secondary, $amount: 10%);
-                                            }
-                                            50%{
-                                                background-color: lighten($color: $color-secondary, $amount: 20%);
-                                        
-                                            }
-                                            100% {
-                                                background-color: lighten($color: $color-secondary, $amount: 30%);
-                                            }
-                                        }
+                                        @include stretch;
                                         &::after{
                                             background-color: $color-secondary;
                                         }
-                                       
                                     }
                                 }
                                 p{
@@ -383,7 +363,7 @@
                                 right: -10px;
                                 cursor: pointer;
                                 &.active{
-                                    color: lighten($color-blue, 20%);
+                                    color: $color-green;
                                 }
                             }
                         }
