--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -10,6 +10,7 @@ footer {
         }
     }
     .footer-bottom{
+        margin-top: 4rem;
         padding-bottom: 2rem;
         .footer-widget{
             h5{
