--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -870,7 +870,7 @@
                                 }
 
                                 &.address {
-                                    @include flexBetween;
+                                    @include flex;
                                     align-items: center;
 
                                     i {
