FindOPensapce section: cursor pointer is added in navtabs, opacity in leaflet control, bottom: 1rem given to align all at same line and overflow is removed in sidebar

--- a/src/scss/base/tab.scss
+++ b/src/scss/base/tab.scss
@@ -69,7 +69,7 @@
         &.active,
         &:hover{
           color:$color-primary;
-          
+          cursor: pointer;
         }
         
       }
