--- a/src/scss/pages/resources.scss
+++ b/src/scss/pages/resources.scss
@@ -163,25 +163,30 @@
                             float: right;
                             width:30%;
                             .icon-wrap-section{
+                                @include flex;
+                                justify-content: space-between;
                                 margin-bottom: 10px;
                                 .btn{
+                                    &.btn-download{
+                                        padding: 0;
+                                    }
                                     &:hover{
-                                        i{
+                                        cursor: pointer;
+                                       /*  i{
                                             background: lighten($color-bg-text, 20%);
                                             @include boxshadow($boxshadow:0 1px 2px rgba($color-bg-text, 0.40));
                                             
-                                        }
+                                        } */
                                     }
                                 }
                                 .btn-share{
                                     margin-right: 10px;
                                 }
                                 i{
-                                    @include animate;
-                                    padding: 10px;
+                                    // @include animate;   
                                     vertical-align: middle;
                                     font-size: 20px;
-                                    border-radius: 50%;
+                                    // border-radius: 50%;
                                 }
                                 a{
                                     @include flexStart;
