--- a/src/scss/pages/resources.scss
+++ b/src/scss/pages/resources.scss
@@ -164,11 +164,14 @@
                             width:30%;
                             .icon-wrap-section{
                                 @include flex;
-                                justify-content: space-between;
+                                // justify-content: space-between;
                                 margin-bottom: 10px;
                                 .btn{
                                     &.btn-download{
                                         padding: 0;
+                                    }
+                                    &:focus{
+                                        outline: none;
                                     }
                                     &:hover{
                                         cursor: pointer;
