--- a/src/scss/pages/resources.scss
+++ b/src/scss/pages/resources.scss
@@ -164,32 +164,29 @@
                             width:30%;
                             .icon-wrap-section{
                                 @include flex;
-                                // justify-content: space-between;
                                 margin-bottom: 10px;
                                 .btn{
                                     &.btn-download{
                                         padding: 0;
                                     }
-                                    &:focus{
-                                        outline: none;
-                                    }
                                     &:hover{
                                         cursor: pointer;
-                                       /*  i{
-                                            background: lighten($color-bg-text, 20%);
+                                        i{
+                                            background: lighten($color-bg-text, 10%);
                                             @include boxshadow($boxshadow:0 1px 2px rgba($color-bg-text, 0.40));
                                             
-                                        } */
+                                        }
                                     }
                                 }
                                 .btn-share{
                                     margin-right: 10px;
                                 }
                                 i{
-                                    // @include animate;   
+                                    @include animate;   
                                     vertical-align: middle;
                                     font-size: 20px;
-                                    // border-radius: 50%;
+                                    border-radius: 50%;
+                                    padding: 5px;
                                 }
                                 a{
                                     @include flexStart;
