--- a/src/css/humanitarian-fonts.css
+++ b/src/css/humanitarian-fonts.css
@@ -12,7 +12,7 @@
 [class^="humanitarian-icon-"], [class*=" humanitarian-icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'Humanitarian-Icons-v02' !important;
-  speak: none;
+  /* speak: none; */
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
