--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -447,7 +447,7 @@
                             i{
                                 font-size: 0.875rem;
                                 &:before{
-                                    color: $color-green !important;
+                                    // color: $color-blue;
                                 }
                             }
                         }
