--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -167,7 +167,7 @@ ul .scrollbar-container{
   .nearby-div-icon i {
      position: absolute;
      width: 22px;
-     font-size: 22px;
+     /* font-size: 12px; */
      left: 0;
      right: 0;
      margin: 12px auto;
