read more on resources

--- a/src/scss/pages/resources.scss
+++ b/src/scss/pages/resources.scss
@@ -175,7 +175,7 @@
                                 padding: 10px 0;
                                 &.collapsed{
                                     &:after{
-                                        content: 'Show More';
+                                        content: '  ';
                                     }
                                 }
                                 &:not(.collapsed){
