blinking current location

--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -102,24 +102,24 @@
 
 }
 
-/* .current-location i{
+.current-location i{
    
-    animation: blink 1s linear infinite;
+    animation: blinkone 1.5s linear infinite;
 }
-@keyframes blink{
+@keyframes blinkone{
     0% {
+        -webkit-transform: scale(0.5);
+        transform: scale(0.2);
+    }
+    50% {
         -webkit-transform: scale(1);
         transform: scale(1);
-    }
-   50% {
-        -webkit-transform: scale(1.5);
-        transform: scale(1.5);
-    }
-    100% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-    }
-} */
+    } 
+     100% {
+      -webkit-transform: scale(0.5);
+      transform: scale(0.5);
+    } 
+}
 
 
 
