--- a/src/components/OpenSpace/OpenSpaceDetails/Details.css
+++ b/src/components/OpenSpace/OpenSpaceDetails/Details.css
@@ -1,6 +1,6 @@
 container .leaflet-map-pane .leaflet-marker-pane .leaflet-marker-icon i{
    
-    /* animation: blink 1s linear infinite; */
+    animation: blink 1s linear infinite;
 }
 @keyframes blink{
     0% {
