--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -60,7 +60,7 @@
 .nearbymarker{
     width:22px !important;
     height: 22px !important;
-    background-color: #418fde;
+    background-color: #5ACE52;
     border-radius: 15px;
     background-clip: padding-box;
     border:solid 6px rgba(11, 170, 5, 0.2);
