--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -204,3 +204,34 @@ ul .scrollbar-container{
     background: #fff;
 
   }
+
+.droneimage {
+    cursor: pointer;
+    padding: 7px;
+    height: 41px;
+    width: 41px;
+    background: #fff;
+    border: 3px solid #f1f1f1;
+    box-shadow: #CCCCCD -5px -3px 15px -1px
+}
+
+.loaderMap {
+    border: 3px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 3px solid #3498db;
+    width: 12px;
+    height: 12px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 1s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
