--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -216,9 +216,9 @@ ul .scrollbar-container{
 }
 
 .loaderMap {
-    border: 3px solid #f3f3f3;
+    border: 2px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 3px solid #3498db;
+    border-top: 2px solid #174BDD;
     width: 12px;
     height: 12px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
@@ -235,3 +235,13 @@ ul .scrollbar-container{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+  .droneimage:hover {
+      /* box-shadow: 0 1px 3px 0px #5ace52; */
+      background: #5ace52;
+      transition: all 0.5s;
+  }
+  /* #droneimage_active{
+      border: 1px solid red;
+      background: pink;
+  } */
