--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -205,11 +205,11 @@ ul .scrollbar-container{
 
   }
 
-.droneimage {
+#dImg {
     cursor: pointer;
     padding: 7px;
-    height: 41px;
-    width: 41px;
+    height: 36px;
+    width: 36px;
     background: #fff;
     border: 3px solid #f1f1f1;
     box-shadow: #CCCCCD -5px -3px 15px -1px
@@ -236,7 +236,7 @@ ul .scrollbar-container{
     100% { transform: rotate(360deg); }
   }
 
-  .droneimage:hover {
+  #droneimage:hover {
       /* box-shadow: 0 1px 3px 0px #5ace52; */
       background: #5ace52;
       transition: all 0.5s;
@@ -245,3 +245,16 @@ ul .scrollbar-container{
       border: 1px solid red;
       background: pink;
   } */
+
+  .imgActive {
+     
+    border-radius: 2px;
+    box-shadow: 0px -1px 1px 2px #5ace52;
+    transition: all .2s ease-in-out;
+}
+
+
+
+
+
+  
