--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -255,7 +255,7 @@ ul .scrollbar-container{
 
 
 div.legendMuni {
-    border: 2px solid #5ace52 !important;
+    border: 2px solid blue !important;
     height: 18px ;
     width: 24px;
     margin-right: 10px;
