--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -18,22 +18,31 @@
             }
         }
 
-        .intro {
-            margin-top: 2rem;
-            padding-left: 8rem;
-
+         .intro {
+            
+            max-width: 800px;
+            margin:0 auto;
+            text-align: center;
+            padding:0 15px;
+            @include flexvr;
+            color:$color-white;
             h1 {
                 font-weight: 800;
-                font-size: 2.8rem;
+                font-size: 3rem;
                 text-transform: uppercase;
                 line-height: 1.4;
+                color:$color-white;
+                span{
+                    font-size: 2rem;
+                    text-transform: lowercase;
+                    font-style: italic;
+                }
             }
 
             p {
                 margin: 2rem 0 0 0;
-                font-size: .975rem;
+                font-size: 1.125rem;
                 font-weight: 600;
-                color: $primary-light;
                 line-height: 1.7;
             }
         }
@@ -307,29 +316,31 @@
 
     .process-content {
         .post-meta {
-            margin-bottom: 3rem;
-            text-align: center;
+            
+            @include flex_start;
+            flex-wrap: nowrap;
+            align-items: center;
 
-            figure {
-                margin-bottom: 2rem;
-                @include boxshadow(0 15px 30px rgba(0, 0, 0, .16));
+            i{
+                flex:0 0 60px;
+                max-width: 60px;
+                margin-right: 1rem;
+                font-size: 3rem;
+                &::before{
+                    color:$color-blue;
+                }
             }
 
             h5 {
                 font-weight: 700;
-                font-size: 1.2rem;
-
-                span {
-                    color: $color-green;
-                    margin-right: .5rem;
-                    font-style: italic;
-                }
+                font-size: 1rem;
+            }
+            &:not(:last-child){
+                margin-bottom: 3rem;
             }
         }
 
-        &:last-child {
-            margin-bottom: 0;
-        }
+        
     }
 }
 
